@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxcomb.1,v 1.4 2023/12/09 23:46:51 greg Exp $"
+.\" RCSid "$Id: rmtxcomb.1,v 1.5 2023/12/11 19:21:43 greg Exp $"
 .TH RMTXCOMB 12/5/2023 RADIANCE
 .SH NAME
 rmtxcomb - combine and convert matrices a row at a time
@@ -329,4 +329,4 @@ Greg Ward
 dctimestep(1), icalc(1), getinfo(1), pcomb(1), pfilt(1),
 ra_xyze(1), rcalc(1),
 rcollate(1), rcontrib(1), rcrop(1), rfluxmtx(1), 
-rmtxop(1), rtrace(1), vwrays(1)
+rmtxop(1), rtpict(1), rtrace(1), vwrays(1)
