@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxop.1,v 1.29 2023/12/08 17:56:26 greg Exp $"
+.\" RCSid "$Id: rmtxop.1,v 1.30 2023/12/11 19:21:43 greg Exp $"
 .TH RMTXOP 1 5/31/2014 RADIANCE
 .SH NAME
 rmtxop - concatenate, add, multiply, divide, transpose, scale, and convert matrices
@@ -276,4 +276,4 @@ Greg Ward
 cnt(1), dctimestep(1), getinfo(1), pcomb(1), pfilt(1),
 ra_xyze(1), rcalc(1),
 rcollate(1), rcontrib(1), rcrop(1), rfluxmtx(1),
-rmtxcomb(1), rtrace(1), vwrays(1), wrapBSDF(1)
+rmtxcomb(1), rtpict(1), rtrace(1), vwrays(1), wrapBSDF(1)
